[package]
name = "aibro"
version = "0.1.0"
edition = "2021"
description = "A CLI tool you can pipe code and then ask for changes, add documentation, etc, using the OpenAI API."

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.12.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.4.0", features = ["derive"] }
atty = "0.2.14"
